[package]
name = "granada"
version = "0.0.1"
authors = ["Nicolas Embriz <nbari@tequila.io>"]
description = "An attempt for making a virtualization manager for Bhyve"
documentation = "https://github.com/nbari/granada/blob/master/README.md"
homepage = "https://github.com/nbari/granada"
repository = "https://github.com/nbari/granada"
readme = "README.md"
keywords = ["bhyve", "freebsd", "virtualization", "api", "server"]
categories = ["command-line-utilities", "command-line-interface", "web-programming::http-server"]
license-file = "LICENSE"
edition = "2018"

[dependencies]
